// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<DeferredSpinner
  loading={true}
>
  <p
    className="page-description"
  >
    <FormattedMessage
      defaultMessage="project_branch_pull_request.lifetime_information"
      id="project_branch_pull_request.lifetime_information"
      values={
        Object {
          "days": "30",
        }
      }
    />
  </p>
</DeferredSpinner>
`;

exports[`should render correctly if not lifetime has been fetch 1`] = `
<DeferredSpinner
  loading={true}
/>
`;

exports[`should render correctly when user is admin 1`] = `
<DeferredSpinner
  loading={true}
>
  <p
    className="page-description"
  >
    <FormattedMessage
      defaultMessage="project_branch_pull_request.lifetime_information"
      id="project_branch_pull_request.lifetime_information"
      values={
        Object {
          "days": "30",
        }
      }
    />
    <FormattedMessage
      defaultMessage="project_branch_pull_request.lifetime_information.admin"
      id="project_branch_pull_request.lifetime_information.admin"
      values={
        Object {
          "settings": <Link
            to="/admin/settings"
          >
            settings.page
          </Link>,
        }
      }
    />
  </p>
</DeferredSpinner>
`;
